// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading indicator 1`] = `
<div
  className="root"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={64}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="6"
      />
      <line
        x1="12"
        x2="12"
        y1="18"
        y2="22"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="4.93"
        y2="7.76"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="16.24"
        y2="19.07"
      />
      <line
        x1="2"
        x2="6"
        y1="12"
        y2="12"
      />
      <line
        x1="18"
        x2="22"
        y1="12"
        y2="12"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="19.07"
        y2="16.24"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="7.76"
        y2="4.93"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    <mock-FormattedMessage
      defaultMessage="Fetching Customer Details..."
      id="customerForm.loading"
    />
  </span>
</div>
`;

exports[`renders prefilled form with data with disabled buttons 1`] = `
Array [
  <FormError
    errors={Array []}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              id="customer_firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              id="customer_lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value="3000 57th Street"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street1"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street1"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value="Suite 200"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value="Manhattan"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="root"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="root"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value="10019"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value="(123) 456-7890"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="defaultShipping"
    >
      <label
        className="root"
        htmlFor="default_shipping"
      >
        <input
          checked={false}
          className="input"
          disabled={false}
          id="default_shipping"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={true}
        onClick={[MockFunction handleCancel]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Cancel"
            id="global.cancelButton"
          />
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={true}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Update
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders prefilled form with data with enabled buttons 1`] = `
Array [
  <FormError
    errors={Array []}
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              id="customer_firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={false}
              id="customer_lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value="3000 57th Street"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street1"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street1"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value="Suite 200"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value="Manhattan"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="root"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="root"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value="10019"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value="(123) 456-7890"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="defaultShipping"
    >
      <label
        className="root"
        htmlFor="default_shipping"
      >
        <input
          checked={true}
          className="input"
          disabled={true}
          id="default_shipping"
          name="default_shipping"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 11 12 14 22 4"
            />
            <path
              d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Make this my default address
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="buttons"
    >
      <button
        className="root_lowPriority"
        disabled={false}
        onClick={[MockFunction handleCancel]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Cancel"
            id="global.cancelButton"
          />
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Update
        </span>
      </button>
    </div>
  </form>,
]
`;

exports[`renders special form for initial default address entry 1`] = `
Array [
  <FormError
    errors={
      Array [
        [Error: Form Error],
      ]
    }
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="formMessage"
    >
      <p
        className="root"
      >
        <mock-FormattedMessage
          defaultMessage="The shipping address you enter will be saved to your address book and set as your default for future purchases."
          id="customerForm.formMessage"
        />
      </p>
    </div>
    <div
      className="email"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="email"
        >
          Email
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              value="fry@planet.express"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="firstname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_firstname"
        >
          First Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              id="customer_firstname"
              name="firstname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Philip"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="lastname"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_lastname"
        >
          Last Name
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              disabled={true}
              id="customer_lastname"
              name="lastname"
              onBlur={[Function]}
              onChange={[Function]}
              value="Fry"
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="country"
    >
      <Country
        validate={[Function]}
      />
    </div>
    <div
      className="street0"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street0"
        >
          Street Address
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street0"
              name="street[0]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="street1"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_street1"
        >
          Street Address 2
          <span
            className="optional"
          >
            <mock-FormattedMessage
              defaultMessage="Optional"
              id="field.optional"
            />
          </span>
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_street1"
              name="street[1]"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="city"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_city"
        >
          City
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="region"
    >
      <Region
        fieldInput="region[region]"
        fieldSelect="region[region_id]"
        optionValueKey="id"
        validate={[Function]}
      />
    </div>
    <div
      className="postcode"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="root"
        >
          ZIP / Postal Code
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="root"
              name="postcode"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <div
      className="telephone"
    >
      <div
        className="root"
      >
        <label
          className="label"
          htmlFor="customer_telephone"
        >
          Phone Number
        </label>
        <span
          className="root"
          style={
            Object {
              "--iconsAfter": 0,
              "--iconsBefore": 0,
            }
          }
        >
          <span
            className="input"
          >
            <input
              className="input"
              id="customer_telephone"
              name="telephone"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            />
          </span>
          <span
            className="before"
          />
          <span
            className="after"
          />
        </span>
        <p
          className="root"
        />
      </div>
    </div>
    <input
      id="default_shipping"
      name="default_shipping"
      onBlur={[Function]}
      onChange={[Function]}
      type="hidden"
      value={true}
    />
    <div
      className="buttons"
    >
      <button
        className="root_normalPriority"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          Save and Continue
        </span>
      </button>
    </div>
  </form>,
]
`;
